--- a/src/index.scss
+++ b/src/index.scss
@@ -7,12 +7,18 @@
 div.row-container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
 }
 
 // 子元素将按【列】排列
 div.col-container {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+}
+
+/* 解决浮动布局高度塌陷和外边界传递（兼容IE6） */
+.clearfix {zoom: 1}
+.clearfix:before, .clearfix:after {
+    content: '';
+    display: table;
+    clear: both;
 }
