--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title></title>
     <%= cdnResources %>
